# angular_rs

./: .gitignore
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20250328170120_create_users_table.sql  20250328203533_create_messages_table.sql
backend/src/: authenticator.rs  lib.rs  main.rs  models.rs  router.rs  services.rs
backend/src/controllers/: authentication.rs
backend/src/handlers/: authentication.rs
backend/src/models/: user.rs
backend/src/router/: authentication.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: app.component.html  app.component.ts  app.config.ts
