[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1" }
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.219" }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
