[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
axum-login = "0.17.0"
dotenvy = "0.15.7"
password-auth = "1.0.0"
serde = "1.0.219"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-rustls"] }
time = "0.3.41"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
